--- a/index.html
+++ b/index.html
@@ -9,190 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-color: rgb(0, 0, 33);
-            color: white;
-            font-family: 'poppins', sans-serif;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            height: 80px;
-            background-color: rgb(18, 18, 62);
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: center;
-        }
-
-        nav ul li {
-            list-style: none;
-            margin: 0 23px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-        }
-
-        nav ul li a:hover {
-            color: rgb(153, 153, 219);
-            font-size: 1.04rem;
-        }
-
-        main hr {
-            border: 0;
-            background: #9c97f1;
-            height: 1.2px;
-            margin: 32px 84px;
-        }
-
-        .left {
-            font-size: 1.5rem;
-        }
-
-        .firstSection {
-            display: flex;
-            justify-content: space-around;
-            align-items: ;
-            margin: 10px 0;
-        }
-
-        .firstSection>div {
-            width: 30;
-
-
-        }
-
-        .leftSection {
-            font-size: 3rem;
-
-        }
-
-        .rightSection img {
-            width: 90%;
-        }
-
-        .purple {
-            color: rgb(170, 107, 228);
-        }
-
-        .text-gray {
-            color: gray;
-        }
-
-        #element {
-            color: rgb(170, 107, 228);
-        }
-
-        .secondsection {
-            max-width: 180vw;
-            margin: auto;
-            height: 28vh;
-        }
-
-        .secondsection h1 {
-            font-size: 1.9rem;
-        }
-
-        .secondsection .box {
-            background: white;
-            width: 80vw;
-            height: 2px;
-            margin: 1px 0;
-            display: flex;
-        }
-
-        .secondsection .vertical {
-            height: 110px;
-            width: 1px;
-            background-color: white;
-            margin: 0 200px;
-        }
-
-        .image-top {
-            width: 60px;
-            position top: -32px;
-            left: -10px;
-        }
-
-        .vertical-title {
-            position: relative;
-            top: 50px;
-            width: 180px;
-        }
-
-        .vertical-desc {
-            position: relative;
-            top: 60px;
-            color: gray;
-            width: 180px;
-            font-size: 9px;
-
-        }
-
-        .thirdsection {
-            max-width: 180vw;
-            margin: auto;
-            height: 180vh;
-        }
-
-        .thirdsection h1 {
-            font-size: 1.9rem;
-        }
-
-        .thirdsection .box {
-            background: white;
-            width: 80vw;
-            height: 2px;
-            margin: 1px 0;
-            display: flex;
-        }
-
-        .thirdsection .vertical {
-            height: 80px;
-            width: 1px;
-            background-color: white;
-            margin: 0 200px;
-        }
-
-        .image-top {
-            width: 32px;
-            /* position: ; */
-            top: -32px;
-            left: -9px;
-        }
-
-        .vertical-title {
-            position: relative;
-            top: 15px;
-            width: 100px;
-        }
-
-        .vertical-desc {
-            position: relative;
-            top: 16px;
-            color: gray;
-            width: 180px;
-            font-size: 9px;
-
-        } 
-        footer{
-            background-color: rgb(0, 0, 0);
-        }
-        .footer{
-            display: flex;
-        }
-    </style>
+    <link rel="stylesheet" href="StyleSheet.css">
 </head>
 
 <body>
