--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="left">KAUSTUBH MALVIYA portfolio</div>
             <div class="right">
                 <ul>
-                    <li><a href="Kaustubh.pdf">ABOUT ME</a></li>
+                    <li><a href="Kaustubhresume.pdf">ABOUT ME</a></li>
                     <li><a href="mailto:kaustubh.malviya04@gmail.com">EMAIL</a></li>
                     <li><a href="https://www.facebook.com/kaustubh.malviya.04/">FACEBOOK</a></li>
                     <li><a href="https://wa.link/4okyyz">WHATSAPP</a></li>
